# src/MediaTypes.php
@@ -4,7 +4,5 @@ namespace alcamo\openapi;
 
 class MediaTypes extends OpenApiNode
 {
-    public const CLASS_MAP = [
-        '*' => MediaType::class
-    ];
+    public const CLASS_MAP = [ '*' => MediaType::class ];
 }
