# src/ServerVariables.php
@@ -4,7 +4,5 @@ namespace alcamo\openapi;
 
 class ServerVariables extends OpenApiNode
 {
-    public const CLASS_MAP = [
-        '*' => ServerVariable::class
-    ];
+    public const CLASS_MAP = [ '*' => ServerVariable::class ];
 }
